--- a/configs/resnet50_unet_cihp_fold1.yml
+++ b/configs/resnet50_unet_cihp_fold1.yml
@@ -1,7 +1,7 @@
 general:
   mode: train # train or eval
   num_workers: 8
-  experiment: baseline
+  experiment: baseline_resnet50unet
   dataset: cihp
 
 model:
