--- a/configs/vgg16_unet_cihp_fold2.yml
+++ b/configs/vgg16_unet_cihp_fold2.yml
@@ -1,11 +1,11 @@
 general:
   mode: train # train or eval
   num_workers: 8
-  experiment: baseline_resnet50unet
+  experiment: baseline_vgg16unet
   dataset: cihp
 
 model:
-  encoder: resnet50
+  encoder: vgg16
   decoder: unet
   batch_size: 8
   num_epochs: 50
@@ -14,6 +14,6 @@ model:
   width: 256
 
 dataset:
-  train: datasets/cihp/train/train_ids4.txt
-  valid: datasets/cihp/train/valid_ids4.txt
+  train: datasets/cihp/train/train_ids2.txt
+  valid: datasets/cihp/train/valid_ids2.txt
   labels: datasets/cihp/labels.txt
