--- a/configs/resnet50_unet_gbn_region_patched_fold3.yml
+++ b/configs/resnet50_unet_gbn_region_patched_fold3.yml
@@ -1,7 +1,7 @@
 general:
   mode: train # train or eval
   num_workers: 8
-  experiment: baseline
+  experiment: baseline_resnet50unet
   dataset: gbn_region_patched
 
 model:
