--- a/configs/resnet50_fpn_camvid_fold0.yml
+++ b/configs/resnet50_fpn_camvid_fold0.yml
@@ -1,12 +1,12 @@
 general:
   mode: train # train or eval
   num_workers: 8
-  experiment: baseline_resnet50unet
+  experiment: baseline_resnet50fpn
   dataset: camvid
 
 model:
   encoder: resnet50
-  decoder: unet
+  decoder: fpn
   batch_size: 8
   num_epochs: 50
   learning_rate: 0.001
@@ -14,6 +14,6 @@ model:
   width: 256
 
 dataset:
-  train: datasets/camvid/train/train_ids4.txt
-  valid: datasets/camvid/train/valid_ids4.txt
+  train: datasets/camvid/train/train_ids0.txt
+  valid: datasets/camvid/train/valid_ids0.txt
   labels: datasets/camvid/labels.txt
