--- a/configs/resnet50_unet_camvid_fold4.yml
+++ b/configs/resnet50_unet_camvid_fold4.yml
@@ -1,7 +1,7 @@
 general:
   mode: train # train or eval
   num_workers: 8
-  experiment: gaussblur_resnet50unet
+  experiment: baseline_resnet50unet
   dataset: camvid
 
 model:
