--- a/configs/train_ricord1a_unetplusplus_timm-regnetx_002_fold3.yml
+++ b/configs/train_ricord1a_unetplusplus_timm-regnetx_002_fold3.yml
@@ -1,7 +1,8 @@
 augmentation:
   augmentation_prob: 0.3
   augmentations:
-  - ''
+  - emboss
+  - clahe
 dataset:
   labels: datasets/ricord1a/labels.txt
   train: datasets/ricord1a/train/train_ids3.txt
