--- a/configs/train_medseg_unetplusplus_timm-regnetx_002_fold1.yml
+++ b/configs/train_medseg_unetplusplus_timm-regnetx_002_fold1.yml
@@ -1,7 +1,8 @@
 augmentation:
   augmentation_prob: 0.3
   augmentations:
-  - ''
+  - emboss
+  - clahe
 dataset:
   labels: datasets/medseg/labels.txt
   train: datasets/medseg/train/train_ids1.txt
