--- a/configs/train_ricord1a_unetplusplus_timm-regnetx_002_fold4.yml
+++ b/configs/train_ricord1a_unetplusplus_timm-regnetx_002_fold4.yml
@@ -1,15 +1,14 @@
 augmentation:
-  augmentation_prob: 0.3
+  augmentation_prob: 0.1
   augmentations:
-  - emboss
-  - clahe
+  - coarse_dropout
 dataset:
   labels: datasets/ricord1a/labels.txt
   train: datasets/ricord1a/train/train_ids4.txt
   valid: datasets/ricord1a/train/valid_ids4.txt
 general:
   dataset: ricord1a
-  experiment: teste
+  experiment: CoarseDropout
   gpu: 0
   mode: train
   num_workers: 4
