--- a/configs/train_medseg_unetplusplus_timm-regnetx_002_fold0.yml
+++ b/configs/train_medseg_unetplusplus_timm-regnetx_002_fold0.yml
@@ -1,15 +1,14 @@
 augmentation:
-  augmentation_prob: 0.3
+  augmentation_prob: 0.1
   augmentations:
-  - emboss
-  - clahe
+  - coarse_dropout
 dataset:
   labels: datasets/medseg/labels.txt
   train: datasets/medseg/train/train_ids0.txt
   valid: datasets/medseg/train/valid_ids0.txt
 general:
   dataset: medseg
-  experiment: teste
+  experiment: CoarseDropout
   gpu: 1
   mode: train
   num_workers: 4
